--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -4,25 +4,72 @@
 
 <h1>Home Page</h1>
 
-<div>
-    <a href="{% url 'create-room' %}"> Create Room </a>
-    <div>
+<style>
+    .home-container{
+        display: grid;
+        grid-template-columns: 1fr 3fr 1fr;
+    }
+</style>
 
-        {% for room in rooms %}
-            <div>
-                <a href="{% url 'update-room' room.id %}">Update</a>
-                <a href="{% url 'delete-room' room.id %}">Delete</a>
-                <span>@ {{room.host.username}} </span>
-                <h4>
-                    <!-- {{room.id}} -- <a href="/room/{{room.id}}"> {{room.name}}</a>  -->
-                    <!-- if we change the url path to path('room_page/') from urlpatterns, it won't matter cause 'room' from below, accesses name=room from urlpatters. -->
-                    {{room.id}} -- <a href="{% url 'room' room.id %}"> {{room.name}}</a> 
-                </h4>
-                <small>{{room.topic.name}}</small>
-                <hr>
-            </div>
+<div class="home-container">
+
+    <div>
+        <h2>Browse Topics</h2>
+        <hr>
+
+        <div>
+            <a href="{% url 'home' %}">All</a>
+        </div>
+
+        {% for topic in topics %}
+           <div>
+                <a href="{% url 'home' %}?r={{topic.name}}"> {{topic.name}} </a>
+           </div>
         {% endfor %}
 
+    </div>
+
+    <div>
+        <div>
+            <h5>{{room_count}} rooms available </h5>
+        </div>
+        
+        <a href="{% url 'create-room' %}"> Create Room </a>
+        
+        <div>
+
+            {% for room in rooms %}
+                <div>
+                    {% if request.user.username == room.host.username %}
+
+                        <a href="{% url 'update-room' room.id %}">Edit</a>
+                        <a href="{% url 'delete-room' room.id %}">Delete</a>
+
+                    {% endif %}
+                    <span>@ {{room.host.username}} </span>
+                    <h4>
+                        <!-- {{room.id}} -- <a href="/room/{{room.id}}"> {{room.name}}</a>  -->
+                        <!-- if we change the url path to path('room_page/') from urlpatterns, it won't matter cause 'room' from below, accesses name=room from urlpatters. -->
+                        {{room.id}} -- <a href="{% url 'room' room.id %}"> {{room.name}}</a> 
+                    </h4>
+                    <small>{{room.topic.name}}</small>
+                    <hr>
+                </div>
+            {% endfor %}
+
+        </div>
+    </div>
+
+    <div>
+        <div>
+            <h2>Top Hosts</h2>
+        </div>
+        <hr>
+        {% for users in all_users %}
+            <div>
+                <h4> {{users.username}} </h4>
+            </div>
+        {% endfor %}
     </div>
 
 </div>
