--- a/templates/main.html
+++ b/templates/main.html
@@ -6,7 +6,16 @@
     <title>StudyBud</title>
 </head>
 <body>
+
     {% include 'navbar.html' %}
+
+    {% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+        <li>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
 
     {% block content %}
 
