--- a/base/templates/base/login_user.html
+++ b/base/templates/base/login_user.html
@@ -15,4 +15,8 @@
 
 </form>
 
+<div>
+    <p>Don't have an account? <span><a href="{% url 'register-user' %}">Register!</a></span></p>
+</div>
+
 {% endblock %}
