--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -19,8 +19,10 @@
 
 {% elif not user.is_authenticated %}
 
-    <a href="{% url 'login-register' %}">
+    <a href="{% url 'login-user' %}">
         <h3>Login</h3>
     </a>
 
 {% endif %}
+
+
