--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -1,83 +1,80 @@
 {% extends 'main.html' %}
-{% load static %}
-{% block content %}
 
-<h1>Home Page</h1>
+<head>
 
-<style>
-    .home-container{
-        display: grid;
-        grid-template-columns: 1fr 3fr 1fr;
-    }
-</style>
+</head>
 
-<script src="{% static 'index.js' %}"></script>
-<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-
-<div class="home-container">
-
-    <div>
-        <h2>Browse Topics</h2>
-        <hr>
+<body>
+    {% block content %}
+    <div class="home-container">
 
         <div>
-            <a href="{% url 'home' %}">All</a>
-        </div>
-
-        {% for topic in topics %}
-           <div>
-                <a href="{% url 'home' %}?r={{topic.name}}"> {{topic.name}} </a>
-                &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-
-                <input type="button" onclick="changeStatus(this)" data-topic="{{ topic.name }}" value="{% if topic.name in list_topic_following %} Following {% else %} Follow {% endif %}"/>
-           </div>
-        {% endfor %}
-
-    </div>
-
-    <div>
-        <div>
-            <h5>{{room_count}} rooms available </h5>
-        </div>
-        
-        <a href="{% url 'create-room' %}"> Create Room </a>
-        
-        <div>
-
-            {% for room in rooms %}
+            <h2>Browse Topics</h2>
+            <hr>
+    
+            <div>
                 <div>
-                    {% if request.user.username == room.host.username %}
-
-                        <a href="{% url 'update-room' room.id %}">Edit</a>
-                        <a href="{% url 'delete-room' room.id %}">Delete</a>
-
-                    {% endif %}
-                    <span>@ {{room.host.username}} </span>
-                    <h4>
-                        <!-- {{room.id}} -- <a href="/room/{{room.id}}"> {{room.name}}</a>  -->
-                        <!-- if we change the url path to path('room_page/') from urlpatterns, it won't matter cause 'room' from below, accesses name=room from urlpatters. -->
-                        {{room.id}} -- <a href="{% url 'room' room.id %}"> {{room.name}}</a> 
-                    </h4>
-                    <small>{{room.topic.name}}</small>
-                    <hr>
+                    <a href="{% url 'home' %}">All</a>
+                </div>
+        
+                {% for topic in topics %}
+                   <div class="grid-item">
+                        <a href="{% url 'home' %}?r={{topic.name}}"> {{topic.name}} </a>
+        
+                        <input type="button" class="button" role="button" style="margin-top: 10px;"
+                        onclick="changeStatus(this)" data-topic="{{ topic.name }}"
+                        value="{% if topic.name in list_topic_following %} Following {% else %} Follow {% endif %}"/>
+                   </div>
+                {% endfor %}
+            </div>
+    
+        </div>
+    
+        <div>
+            <div>
+                <h5>{{room_count}} rooms available </h5>
+            </div>
+            
+            <a href="{% url 'create-room' %}"> Create Room </a>
+            
+            <div>
+    
+                {% for room in rooms %}
+                    <div>
+                        {% if request.user.username == room.host.username %}
+    
+                            <a href="{% url 'update-room' room.id %}">Edit</a>
+                            <a href="{% url 'delete-room' room.id %}">Delete</a>
+    
+                        {% endif %}
+                        <span>@ {{room.host.username}} </span>
+                        <h4>
+                            <!-- {{room.id}} -- <a href="/room/{{room.id}}"> {{room.name}}</a>  -->
+                            <!-- if we change the url path to path('room_page/') from urlpatterns, it won't matter cause 'room' from below, accesses name=room from urlpatters. -->
+                            {{room.id}} -- <a href="{% url 'room' room.id %}"> {{room.name}}</a> 
+                        </h4>
+                        <small>{{room.topic.name}}</small>
+                        <hr>
+                    </div>
+                {% endfor %}
+    
+            </div>
+        </div>
+    
+        <div>
+            <div>
+                <h2>Top Hosts</h2>
+            </div>
+            <hr>
+            {% for users in all_users %}
+                <div>
+                    <h4> {{users.username}} </h4>
                 </div>
             {% endfor %}
-
         </div>
+    
     </div>
-
-    <div>
-        <div>
-            <h2>Top Hosts</h2>
-        </div>
-        <hr>
-        {% for users in all_users %}
-            <div>
-                <h4> {{users.username}} </h4>
-            </div>
-        {% endfor %}
-    </div>
-
-</div>
-
-{% endblock %}
+    
+    {% endblock %}
+    
+</body>
