--- a/base/static/css/styles.css
+++ b/base/static/css/styles.css
@@ -13,10 +13,11 @@ body, html {
 
 .home-container{
     display: grid;
+    margin-left: 50px;
     grid-template-columns: 1fr 3fr 1fr;
     width: 90vw;
     gap: 30px;
-    padding: 10px;
+    padding: 20px;
     box-sizing: border-box;
 }
 
