--- a/templates/main.html
+++ b/templates/main.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'css/room.css' %}">
     <script src="{% static 'index.js' %}"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 
@@ -18,14 +19,13 @@
 
     {% include 'navbar.html' %}
 
-    <div class="home-container">    
 
         {% block content %}
 
 
         {% endblock %}
 
-    </div>
+
     
 </body>
 </html>
