--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -6,6 +6,9 @@
 
 <body>
     {% block content %}
+    <div style="margin-left: 10px; margin-top: 10px;">
+        <h6>Hello {{request.user}}</h3>
+    </div>
     <div class="home-container">
 
         <div>
