--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -8,7 +8,7 @@
         <div class="room-container">
             <div class="row">
                 <div class="column side"></div>
-                <div class="column middle">
+                <div class="column middle" style="margin-top: 40px; height: 550px;">
                     <div>
                         <h1>{{room.name}}</h1>    
                     </div>
@@ -53,15 +53,13 @@
                     <div>
                         <form method="POST">
                             {% csrf_token %}
-                            <input type="text" class="form-control" name="inc_msg" style="width: 750px; margin-top: 10px;"/>
+                            <input type="text" class="form-control" name="inc_msg" style="width: 665px; margin-top: 10px;"/>
                         </form>
                     </div>
                 </div>
                 <div class="column side"></div>
             </div>
             
-            <div class="footer"></div>
-        </div>
     
     {% endblock %}
 </body>
