--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,9 +1,9 @@
 
 
-<nav>
+<nav class="nav-bar">
     <div>
-        <ul class="nav justify-content-between">
-            <li>
+        <ul class="nav justify-content-between" style="list-style: none;">
+            <li >
                 <a href="/">
                     <h1>Home</h1>
                 </a>
