--- a/base/static/css/template_format.css
+++ b/base/static/css/template_format.css
@@ -3,13 +3,17 @@
     gap: 10px;
 }
 
-.room-container{
-    /* margin-top: 50px; */
-    margin-left: 20px;
+.row{
+  width: 1530px;
+  margin-left: 2px;
+  display: flex;
+  align-items: right;
+  justify-content:center;
 }
+
 /* Style the header */
 .header {
-  background-color: #f1f1f1;
+  background-color: #ffffff;
   padding: 10px;
   text-align: center;
   font-size: 25px;
@@ -30,34 +34,32 @@
   float: left;
   padding: 10px;
   height: 300px; /* Should be removed. Only for demonstration */
-  
 }
 
 /* Left and right column */
 .column.side {
   width: 26%;
   border-radius: 8px;
+  
 }
 
 /* Middle column */
 .column.middle {
   width: 45%;
-  /* margin-left: 50px; */
   border-radius: 8px;
   background-color:rgb(176, 176, 255);
-  height: 530px;
-  
+  overflow-y: auto;
 }
 
 /* Additional styling for the second row */
 .column.middle .second-row {
-    margin-top: 9px; /* Adjust the margin as needed */
+    margin-top: 9px; 
     background-color: #f1f1f1;
     border-radius: 8px;
     padding: 20px;
     height: 300px;
-    overflow: scroll;
-}   
+    overflow-y: auto;
+}    
 
 /* Clear floats after the columns */
 .row:after {
@@ -67,12 +69,6 @@
   width: 20%;
 }
 
-/* Style the footer */
-.footer {
-  background-color: #f1f1f1;
-  padding: 10px;
-  text-align: center;
-}
 
 /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
 @media (max-width: 600px) {
