--- a/base/static/css/user_profile.css
+++ b/base/static/css/user_profile.css
@@ -1,47 +1,62 @@
 /* Left and right columns */
-.column.left,
+.column.left{
+  background-color: rgb(176, 176, 255);
+  height: 244px;
+  float: left; /* Float the columns to make them side by side */
+}
 .column.right {
-    width: 45%;
-    margin: 0 2%; /* Adjust the margin as needed */
-    border-radius: 8px;
     background-color: rgb(176, 176, 255);
-    height: 400px;
-    float: left; /* Float the columns to make them side by side */
-    box-sizing: border-box; /* Include padding and border in the total width and height */
+    height: 244px;
+    width: 460px;
+    box-sizing: border-box;  /* Include padding and border in the total width and height */
 }
 
-/* Additional styling for the columns */
-.column.left .left-column-content,
+.column.left .left-column-content{
+  background-color: #ffffff;
+  border-radius: 100px;
+  padding: 10px;
+}
+
 .column.right .right-column-content {
-    margin-top: 9px; /* Adjust the margin as needed */
-    background-color: #f1f1f1;
+    background-color: #ffffff;
     border-radius: 8px;
-    padding: 20px;
-    height: 300px;
+    padding: 15px;
+    height: 210px;
+    width: 445px;
     /* overflow: scroll; */
 }
 
 .profile-pic{
-    max-height:100%; max-width:100%;
+    height: 193px;
+    width: 163px;
     object-fit: cover;
-    
+    border-radius: 100px;
   }
 
-  .user-button {
-    align-items: center;
-    background-image: linear-gradient(144deg,#00DDEB, #5B42F3 50%, #AF40FF);
-    border: 0;
-    border-radius: 12px;
-    box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
-    box-sizing: border-box;
-    color: #FFFFFF;
-    font-size: 12px;
-    justify-content: center;
-    text-decoration: none;
-    cursor: pointer;
-  }
-  
-  .user-button:active,
-  .user-button:hover {
-    outline: 0;
-  }
+.middle-col-second-row {
+  background-color: #ffffff;
+  border-radius: 8px;
+  padding: 15px;
+  height: 255px;
+  width: 644px;
+  margin-left: 14px;
+}  
+
+.user-button {
+  align-items: center;
+  background-image: linear-gradient(144deg,#00DDEB, #5B42F3 50%, #AF40FF);
+  border: 0;
+  border-radius: 12px;
+  box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  font-size: 11px;
+  justify-content: center;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.user-button:active,
+.user-button:hover {
+  outline: 0;
+}
